--- a/Desafios/Desafio05/desafio.html
+++ b/Desafios/Desafio05/desafio.html
@@ -10,7 +10,7 @@
      <input type="button" value="Clique em Mim" onclick="msg()">
      <script>
          function msg(){
-             alert ('Estou livre da Maldição!')
+             alert ('já Fiz O Olá Mundo! Estou livre da Maldição!')
          }
      </script>
 </body>
