--- a/Educativo_4_Ano/index.html
+++ b/Educativo_4_Ano/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
         <h1> Estudo do Meio! </h1>
     </header>
@@ -15,13 +15,13 @@
             Local de Conteúdo.
         </div>
         <div>
-            Em Construção.
+            
         </div>
     </section>
 
     <footer>
         <p>&copy; Filipe Gaspar; Todos os direitos reservados!</p>
     </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
