--- a/Educativo_4_Ano/index.html
+++ b/Educativo_4_Ano/index.html
@@ -17,10 +17,10 @@
         <div id="questao">  </div>
         
         <div>
-            <div id="resp1"></div>
-            <div id="resp2"></div>
-            <div id="resp3"></div>
-            <div id="resp4"></div>
+            <div id="resp1">reposta1</div>
+            <div id="resp2">reposta2</div>
+            <div id="resp3">reposta3</div>
+            <div id="resp4">reposta4</div>
         </div>
     </section>
 
