--- a/Educativo_4_Ano/index.html
+++ b/Educativo_4_Ano/index.html
@@ -17,7 +17,7 @@
         <div id="questao">  </div>
         
         <div>
-            <div id="resp1" onclick="verificar()">reposta1</div>
+            <div id="resp1" onclick="verificar(1)">reposta1</div>
             <div id="resp3">reposta3</div>
             <div id="resp2">reposta2</div> 
             <div id="resp4">reposta4</div>
