--- a/Educativo_4_Ano/index.html
+++ b/Educativo_4_Ano/index.html
@@ -18,9 +18,9 @@
         
         <div>
             <div id="resp1" onclick="verificar(1)">reposta1</div>
-            <div id="resp3">reposta3</div>
-            <div id="resp2">reposta2</div> 
-            <div id="resp4">reposta4</div>
+            <div id="resp3" onclick="verificar(3)">reposta3</div>
+            <div id="resp2" onclick="verificar(2)">reposta2</div> 
+            <div id="resp4" onclick="verificar(4)">reposta4</div>
         </div>
     </section>
 
