--- a/Desafios/Desafio06/desafio.html
+++ b/Desafios/Desafio06/desafio.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio 02!</title>
+    <title>Desafio 06!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body> 
- <div id="primos">
+ <div id="resultado">
 
  </div>   
 <script>
-    let primos = document.querySelector('div#primos')
-    primos.innerHTML = `Testando a DIV de Resultado`
+    let result = document.querySelector('div#resultado')
+    result.innerHTML = `Testando a DIV de Resultado`
 </script>
 </body>
 </html>
