--- a/Desafios/Desafio06/desafio.html
+++ b/Desafios/Desafio06/desafio.html
@@ -6,10 +6,20 @@
     <title>Desafio 06!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body> 
- <div id="resultado">
+<body>
+    <header>
+        <h1>Desafio 06! - Vamos lá praticar</h1>
+    </header> 
 
- </div>   
+    <section>   
+        <div id="resultado">
+
+        </div>   
+    </section>
+    <footer> 
+        <p> &copy; 2020 Filipe Gaspar</p>
+    </footer>
+
 <script>
     let result = document.querySelector('div#resultado')
     result.innerHTML = `<h1>Números primos Entre <strong>0</strong> e <strong>200<Strong> </h1>`
