--- a/Desafios/Desafio06/desafio.html
+++ b/Desafios/Desafio06/desafio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Desafio 06! - Vamos lá praticar</h1>
+        <h1>Desafio 06!</h1>
     </header> 
 
     <section>   
