--- a/Desafios/Desafio07/desafio.html
+++ b/Desafios/Desafio07/desafio.html
@@ -13,7 +13,15 @@
     
     <section>
         <div>
-            Desafio??????
+            <p>Insira um número:
+                <input type="number" id="txtnum" name="txtnum">
+                <input type="button" value="Inserir">
+            </p>
+            <select name="selnum" id="selnum" size="4">
+
+            </select>
+            <br>
+            <input type="button" value="Terminar">
         </div>
         <div>
             Vamos tentar resolver!
