--- a/Desafios/Desafio07/desafio.html
+++ b/Desafios/Desafio07/desafio.html
@@ -23,7 +23,7 @@
             <br>
             <input type="button" value="Terminar">
         </div>
-        <div>
+        <div id="result">
             Vamos tentar resolver!
         </div>
     </section>
