--- a/Desafios/Desafio07/desafio.html
+++ b/Desafios/Desafio07/desafio.html
@@ -15,7 +15,7 @@
         <div>
             <p>Insira um número:
                 <input type="number" id="txtnum" name="txtnum">
-                <input type="button" value="Inserir">
+                <input type="button" value="Inserir" onclick="inserir()">
             </p>
             <select name="selnum" id="selnum" size="4">
 
