--- a/Desafios/Desafio07/desafio.html
+++ b/Desafios/Desafio07/desafio.html
@@ -21,7 +21,7 @@
 
             </select>
             <br>
-            <input type="button" value="Terminar">
+            <input type="button" value="Terminar" onclick="termina()">
         </div>
         <div id="result">
             
