--- a/Desafios/Desafio08/desafio.html
+++ b/Desafios/Desafio08/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div id="notas">
-            <p>Número de testes: <input type="number"> <input type="button" value="iniciar"></p>
+            <p>Número de testes: <input type="number" id="txtNrTestes" > <input type="button" value="iniciar" onclick="registanotas()"></p>
         </div>
         <div>
           
