--- a/Desafios/Desafio08/desafio.html
+++ b/Desafios/Desafio08/desafio.html
@@ -15,7 +15,7 @@
         <div id="notas">
             <p>Número de testes: <input type="number" id="txtNrTestes" > <input type="button" value="iniciar" onclick="registanotas()"></p>
         </div>
-        <div>
+        <div id="resultado">
           
         </div>
     </section>
