--- a/Desafios/Desafio08/desafio.html
+++ b/Desafios/Desafio08/desafio.html
@@ -16,7 +16,7 @@
             <p>Número de testes: <input type="number" id="txtNrTestes" > <input type="button" value="iniciar" onclick="registanotas()"></p>
         </div>
         <div id="resultado">
-          
+          <label for=""></label>
         </div>
     </section>
 
