--- a/Desafios/Desafio08/desafio.html
+++ b/Desafios/Desafio08/desafio.html
@@ -13,8 +13,8 @@
     
     <section>
         <div id="notas">
-            <p>Por favor indique.</p>
-            <p>Número de testes: <input type="number" id="txtNrTestes" > <input type="button" value="iniciar" onclick="registanotas()"></p>
+            <p>Software de Gestão de notas. Por favor indique.</p>
+            <p>O número de testes: <input type="number" id="txtNrTestes" > <input type="button" value="iniciar" onclick="registanotas()"></p>
         </div>
         <div id="resultado">
           <label for=""></label>
