Desafio08 - baixei o nivel de dificuldade

--- a/Desafios/Desafio08/desafio.html
+++ b/Desafios/Desafio08/desafio.html
@@ -13,8 +13,17 @@
     
     <section>
         <div id="notas">
-            <p>Software de Gestão de notas. Por favor indique.</p>
-            <p>O número de testes: <input type="number" id="txtNrTestes" > <input type="button" value="iniciar" onclick="registanotas()"></p>
+            <p>Gestão de notas.</p>
+            <p>
+                Nota do Aluno (0 a 10)
+                <input type="number" id="txtNrTestes"> 
+                <input type="button" value="Inserir" onclick="registanotas()">
+            </p>
+            <p>
+                <select name="" id="" size="4">
+
+                </select>
+            </p>
         </div>
         <div id="resultado">
           <label for=""></label>
