--- a/Desafios/Desafio08/desafio.html
+++ b/Desafios/Desafio08/desafio.html
@@ -23,6 +23,8 @@
                 <select name="" id="" size="4">
 
                 </select>
+                <br>
+                <input type="button" value="Calcular Média">
             </p>
         </div>
         <div id="resultado">
