Desafio08 - Baixei o nivel de dificuldade

--- a/Desafios/Desafio08/desafio.html
+++ b/Desafios/Desafio08/desafio.html
@@ -12,15 +12,15 @@
     </header>
     
     <section>
-        <div id="notas">
+        <div>
             <p>Gestão de notas.</p>
             <p>
                 Nota do Aluno (0 a 10)
-                <input type="number" id="txtNrTestes"> 
+                <input type="number" id="txtNota"> 
                 <input type="button" value="Inserir" onclick="registanotas()">
             </p>
             <p>
-                <select name="" id="" size="4">
+                <select name="selnotas" id="selectNotas" size="4">
 
                 </select>
                 <br>
