--- a/Desafios/Desafio08/desafio.html
+++ b/Desafios/Desafio08/desafio.html
@@ -24,11 +24,11 @@
 
                 </select>
                 <br>
-                <input type="button" value="Calcular Média">
+                <input type="button" value="Calcular Média" onclick="calculaMedia()">
             </p>
         </div>
         <div id="resultado">
-          <label for=""></label>
+         
         </div>
     </section>
 
