--- a/Desafios/Desafio09/desafio.html
+++ b/Desafios/Desafio09/desafio.html
@@ -16,15 +16,16 @@
             <p>
                 Insira um número: 
                 <input type="number">
-                <input type="button" value="Inserir">
+                <input type="button" value="Inserir" onclick="inserir()">
             </p>
             <p>
                 <select name="selnum" id="selnum" size="5">
-                    
+
                 </select>
             </p>
+            <input type="button" value="Calcular">
         </div>
-        <div>
+        <div id="resultado">
             
         </div>
     </section>
