--- a/Desafios/Desafio09/desafio.html
+++ b/Desafios/Desafio09/desafio.html
@@ -15,7 +15,7 @@
         <div>
             <p>
                 Insira um número: 
-                <input type="number">
+                <input type="number" id="txtnum" name="txtnum">
                 <input type="button" value="Inserir" onclick="inserir()">
             </p>
             <p>
