--- a/Desafios/Desafio09/desafio.html
+++ b/Desafios/Desafio09/desafio.html
@@ -24,7 +24,7 @@
 
                 </select>
             </p>
-            <input type="button" value="Calcular" id="btnCalc">
+            <input type="button" value="Calcular" id="btnCalc" onclick="calcular()">
         </div>
         <div id="resultado">
             
