--- a/Desafios/Desafio09/desafio.html
+++ b/Desafios/Desafio09/desafio.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo Para os Desafios!</title>
+    <title>Desafio 9_a</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body onload="iniciar()">
     <header>
-        <h1>Números ao Quadrado!</h1>
+        <h1>Exponenciar Números!</h1>
     </header>
     
     <section>
         <div>
-            <p>Calculadore de números ao Quadrado. 5 operações</p>
+            <p>Calculadore de Exponenciação de números. 5 operações</p>
             <p>
-                Insira um número: 
+                Base: 
                 <input type="number" id="txtnum" name="txtnum">
+                Expoente: 
+                <input type="number" name="" id="txtexp">
                 <input type="button" value="Inserir" onclick="inserir()" id="btninsert">
             </p>
             <p>
