--- a/Desafios/Desafio09_a/desafio.html
+++ b/Desafios/Desafio09_a/desafio.html
@@ -18,7 +18,7 @@
                 Base: 
                 <input type="number" id="txtnum" name="txtnum" class="txtbase">
                 Expoente: 
-                <input type="number" name="" id="txtexp" class="txtbase">
+                <input type="number" name="txtexp" id="txtexp" class="txtbase">
                 <input type="button" value="Inserir" onclick="inserir()" id="btninsert">
             </p>
             <p>
