Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo Para os Desafios!</title>
+    <title>Portugês 4º Ano (A Há)</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>A ou Há? </h1>
     </header>
     
     <section>
         <div>
-            Desafio??????
+            <h3>Exemplos:</h3>
+            <p>A nossa casa fica <span class="destaque"><strong>a</strong></span> duzentos metros daqui.</p>
+            <p><span class="destaque"><strong>Há</strong></span> mais de uma semana que não te vejo.</p>
+            <h2>Exercícios. A ou Há</h2>
         </div>
         <div>
-            Vamos tentar resolver!
+           <p>1. Complete com <strong>a</strong> ou <strong>há</strong>:</p>
         </div>
     </section>
 
