Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -20,6 +20,20 @@
         </div>
         <div>
            <p>1. Complete com <strong>a</strong> ou <strong>há</strong>:</p>
+           <ul>
+                
+                <li>Daqui <select name="selresp" id="selresp">
+                        <option value="a">a</option>
+                        <option value="há">Há</option>
+                    </select> três anos atingirei <select name="selresp2" id="selresp2">
+                        <option value="há">Há</option>
+                        <option value="a">a</option>
+                    </select> maioridade
+                </li>
+
+
+           </ul>
+           <input type="button" value="Verificar" onclick="verificar()">
         </div>
     </section>
 
