Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -25,10 +25,12 @@
                 <li>Daqui <select name="selresp" id="selresp">
                         <option value="a">a</option>
                         <option value="há">Há</option>
-                    </select> três anos atingirei <select name="selresp2" id="selresp2">
+                    </select> três anos atingirei 
+                    
+                    <!--<select name="selresp2" id="selresp2">
                         <option value="há">Há</option>
                         <option value="a">a</option>
-                    </select> maioridade
+                    </select> maioridade-->
                 </li>
 
 
