Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -28,11 +28,19 @@
                     </select> três anos atingirei 
                     
                     <select name="selresp2" id="selresp2">
-                        <option value="há">Há</option>
+                        <option value="há">há</option>
                         <option value="a">a</option>
                     </select> maioridade
                 </li>
 
+                <li>
+                    <select name="" id="selresp3">
+                        <option value="a">A</option>
+                        <option value="há">Há</option>
+                    </select> seis semanas que não vejo o Juliano.
+                </li>
+
+                
 
            </ul>
            <input type="button" value="Verificar" onclick="verificar()">
