Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -34,14 +34,27 @@
                 </li>
 
                 <li>
-                    <select name="" id="selresp3">
+                    <select name="selresp3" id="selresp3">
                         <option value="a">A</option>
                         <option value="há">Há</option>
                     </select> seis semanas que não vejo o Juliano.
                 </li>
 
-                
+                <li>
+                    Estou nesta fila 
+                    <select name="selresp4" id="selresp4">
+                        <option value="a">a</option>
+                        <option value="há">há</option>
+                    </select> horas.
+                </li>
 
+                <li>
+                    O sino soará daqui 
+                    <select name="selresp5" id="selresp5">
+                        <option value="a">a</option>
+                        <option value="há">há</option>
+                    </select> cinco minutos.
+                </li>
            </ul>
            <input type="button" value="Verificar" onclick="verificar()">
         </div>
