Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portugês 4º Ano (A Há)</title>
+    <title>Portugês 4º Ano (A ou Há)</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -32,14 +32,14 @@
                         <option value="a">a</option>
                     </select> maioridade
                 </li>
-
+                <br>
                 <li>
                     <select name="selresp3" id="selresp3">
                         <option value="a">A</option>
                         <option value="há">Há</option>
                     </select> seis semanas que não vejo o Juliano.
                 </li>
-
+                <br>
                 <li>
                     Estou nesta fila 
                     <select name="selresp4" id="selresp4">
@@ -47,7 +47,7 @@
                         <option value="há">há</option>
                     </select> horas.
                 </li>
-
+                <br>
                 <li>
                     O sino soará daqui 
                     <select name="selresp5" id="selresp5">
@@ -55,7 +55,68 @@
                         <option value="há">há</option>
                     </select> cinco minutos.
                 </li>
+                <br>
+                <li>Por fazer: 
+                    Chegou 
+                    <select name="selresp6" id="selresp6">
+                        <option value="a">a</option>
+                        <option value="há">há</option>
+                    </select> cerca de duas semanas.
+                </li>
+
+                <li>Por fazer: 
+                    Não nos vemos  
+                    <select name="selresp7" id="selresp7">
+                        <option value="a">a</option>
+                        <option value="há">há</option>
+                    </select> ___ alguns anos.
+                </li>
+
+                <li>Por fazer: 
+                    Naquele lugar,
+                    <select name="selresp8" id="selresp8">
+                        <option value="a">a</option>
+                        <option value="há">há</option>
+                    </select>
+                    ___ uma vila com casas bem antigas.
+                </li>
+
+                <li>Por fazer: 
+                    Quando 
+                    <select name="selresp9" id="selresp9">
+                        <option value="a">a</option>
+                        <option value="há">há</option>
+                    </select>
+                    ___ uma semana eu disse que iria à Austrália, ela reclamou.
+                </li>
+
+                <li>Por fazer: 
+                    <select name="selresp10" id="selresp10">
+                        <option value="a">a</option>
+                        <option value="há">há</option>
+                    </select> 
+                    poucos quilômetros da cidade, 
+                    <select name="selresp11" id="selresp11">
+                        <option value="a">a</option>
+                        <option value="há">há</option>
+                    </select>
+                    ___ uma feira de antiguidades.
+                </li>
+                
+                <li>Por fazer: 
+                    <select name="selresp12" id="selresp12">
+                        <option value="a">a</option>
+                        <option value="há">há</option>
+                    </select>
+                    ___ muito tempo que não 
+                    <select name="selresp13" id="selresp13">
+                        <option value="a">a</option>
+                        <option value="há">há</option>
+                    </select>
+                    ___ mais vagas naquela empresa.
+                </li>
            </ul>
+
            <input type="button" value="Verificar" onclick="verificar()">
         </div>
     </section>
