Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -56,22 +56,22 @@
                     </select> cinco minutos.
                 </li>
                 <br>
-                <li>Por fazer: 
+                <li> 
                     Chegou 
                     <select name="selresp6" id="selresp6">
                         <option value="a">a</option>
                         <option value="há">há</option>
                     </select> cerca de duas semanas.
                 </li>
-
-                <li>Por fazer: 
+                <br>
+                <li>
                     Não nos vemos  
                     <select name="selresp7" id="selresp7">
-                        <option value="a">a</option>
                         <option value="há">há</option>
-                    </select> ___ alguns anos.
+                        <option value="a">a</option>
+                    </select> alguns anos.
                 </li>
-
+                
                 <li>Por fazer: 
                     Naquele lugar,
                     <select name="selresp8" id="selresp8">
