Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -71,16 +71,15 @@
                         <option value="a">a</option>
                     </select> alguns anos.
                 </li>
-                
-                <li>Por fazer: 
+                <br>
+                <li> 
                     Naquele lugar,
                     <select name="selresp8" id="selresp8">
                         <option value="a">a</option>
                         <option value="há">há</option>
-                    </select>
-                    ___ uma vila com casas bem antigas.
+                    </select> uma vila com casas bem antigas.
                 </li>
-
+                <br>
                 <li>Por fazer: 
                     Quando 
                     <select name="selresp9" id="selresp9">
