Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -80,15 +80,14 @@
                     </select> uma vila com casas bem antigas.
                 </li>
                 <br>
-                <li>Por fazer: 
+                <li> 
                     Quando 
                     <select name="selresp9" id="selresp9">
-                        <option value="a">a</option>
                         <option value="há">há</option>
-                    </select>
-                    ___ uma semana eu disse que iria à Austrália, ela reclamou.
+                        <option value="a">a</option>                        
+                    </select> uma semana eu disse que iria à Austrália, ela reclamou.
                 </li>
-
+                <br>
                 <li>Por fazer: 
                     <select name="selresp10" id="selresp10">
                         <option value="a">a</option>
