Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -90,15 +90,13 @@
                 <br>
                 <li>Por fazer: 
                     <select name="selresp10" id="selresp10">
-                        <option value="a">a</option>
-                        <option value="há">há</option>
-                    </select> 
-                    poucos quilômetros da cidade, 
+                        <option value="há">Há</option>
+                        <option value="a">A</option>                        
+                    </select> poucos quilômetros da cidade, 
                     <select name="selresp11" id="selresp11">
                         <option value="a">a</option>
                         <option value="há">há</option>
-                    </select>
-                    ___ uma feira de antiguidades.
+                    </select> uma feira de antiguidades.
                 </li>
                 
                 <li>Por fazer: 
