Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -88,7 +88,7 @@
                     </select> uma semana eu disse que iria à Austrália, ela reclamou.
                 </li>
                 <br>
-                <li>Por fazer: 
+                <li>
                     <select name="selresp10" id="selresp10">
                         <option value="há">Há</option>
                         <option value="a">A</option>                        
@@ -98,16 +98,15 @@
                         <option value="há">há</option>
                     </select> uma feira de antiguidades.
                 </li>
-                
-                <li>Por fazer: 
+                <br>
+                <li>
                     <select name="selresp12" id="selresp12">
-                        <option value="a">a</option>
-                        <option value="há">há</option>
-                    </select>
-                    ___ muito tempo que não 
+                        <option value="A">A</option>
+                        <option value="Há">Há</option>
+                    </select> muito tempo que não 
                     <select name="selresp13" id="selresp13">
-                        <option value="a">a</option>
                         <option value="há">há</option>
+                        <option value="a">a</option>                        
                     </select>
                     ___ mais vagas naquela empresa.
                 </li>
