Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -101,8 +101,8 @@
                 <br>
                 <li>
                     <select name="selresp12" id="selresp12">
-                        <option value="A">A</option>
-                        <option value="Há">Há</option>
+                        <option value="a">A</option>
+                        <option value="há">Há</option>
                     </select> muito tempo que não 
                     <select name="selresp13" id="selresp13">
                         <option value="há">há</option>
