Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -107,8 +107,7 @@
                     <select name="selresp13" id="selresp13">
                         <option value="há">há</option>
                         <option value="a">a</option>                        
-                    </select>
-                    ___ mais vagas naquela empresa.
+                    </select> mais vagas naquela empresa.
                 </li>
            </ul>
 
