Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -109,8 +109,15 @@
                         <option value="a">a</option>                        
                     </select> mais vagas naquela empresa.
                 </li>
+                <br>
+                <li>
+                    <select name="selresp14" id="selresp14">
+                        <option value="há">Há</option>
+                        <option value="a">A</option>
+                    </select> neta foi a casa do avô
+                </li>
            </ol>
-
+           <br>
            <input type="button" value="Verificar" onclick="verificar()">
         </div>
     </section>
