Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -30,7 +30,7 @@
                     <select name="selresp2" id="selresp2">
                         <option value="há">há</option>
                         <option value="a">a</option>
-                    </select> maioridade
+                    </select> maioridade.
                 </li>
                 <br>
                 <li>
@@ -114,7 +114,11 @@
                     <select name="selresp14" id="selresp14">
                         <option value="há">Há</option>
                         <option value="a">A</option>
-                    </select> neta foi a casa do avô
+                    </select> neta foi 
+                    <select name="selresp15" id="selresp15">
+                        <option value="a">a</option>
+                        <option value="há">há</option>                        
+                    </select> casa do avô.
                 </li>
            </ol>
            <br>
