Desafio30-Especial de Português (a != há))

--- a/Desafios/Desafio30_Especial_Portugues/desafio.html
+++ b/Desafios/Desafio30_Especial_Portugues/desafio.html
@@ -122,7 +122,7 @@
                 </li>
            </ol>
            <br>
-           <input type="button" value="Verificar" onclick="verificar()">
+           <input type="button" value="Verificar" onclick="verificar()" id="btnverifica">
         </div>
     </section>
 
