Desafio01 - Olá Mundo! - alert()

--- a/Desafios/Desafio01/desafio.html
+++ b/Desafios/Desafio01/desafio.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-        <script>alert('Olá Mundo')</script>        
+        <script>alert('Olá Mundo!')</script>        
 </body>
 </html>
