Desafio10 - Sequência Fibonacci

--- a/Desafios/Desafio10/desafio.html
+++ b/Desafios/Desafio10/desafio.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo Para os Desafios!</title>
+    <title>Desafios 10!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Sequência Fibonacci!</h1>
+        <p>A soma dos seus termos</p>
     </header>
     
     <section>
         <div>
-            Desafio??????
+            <p>Quantos termos deseja mostrar <input type="number"> </p>
+
         </div>
         <div>
             Vamos tentar resolver!
