Desafio10 - Sequência Fibonacci

--- a/Desafios/Desafio10/desafio.html
+++ b/Desafios/Desafio10/desafio.html
@@ -14,10 +14,10 @@
     
     <section>
         <div>
-            <p>Quantos termos deseja mostrar <input type="number"> </p>
+            <p>Quantos termos deseja mostrar <input type="number" id="txtnum" name="txtnum"> <input type="button" value="Mostrar" onclick="mostrar()"> </p>
 
         </div>
-        <div>
+        <div id="resultado">
             Vamos tentar resolver!
         </div>
     </section>
