Desafio10 - Sequência Fibonacci

--- a/Desafios/Desafio10/desafio.html
+++ b/Desafios/Desafio10/desafio.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <header>
-        <h1>Sequência Fibonacci!</h1>
+        <h1>Sequência de Fibonacci!</h1>
         <p>A soma dos seus termos</p>
     </header>
     
     <section>
         <div>
-            <p>Quantos termos deseja mostrar <input type="number" id="txtnum" name="txtnum"> <input type="button" value="Mostrar" onclick="mostrar()"> </p>
+            <p>Quantos termos deseja mostrar: <input type="number" id="txtnum" name="txtnum"> <input type="button" value="Mostrar" onclick="mostrar()"> </p>
 
         </div>
         <div id="resultado">
-            Vamos tentar resolver!
+            
         </div>
     </section>
 
