Desafio11 - Calculadora de IMC

--- a/Desafios/Desafio11/desafio.html
+++ b/Desafios/Desafio11/desafio.html
@@ -13,7 +13,8 @@
     
     <section>
         <div>
-            Desafio??????
+            <p>Calculadora de Índice de Massa Corporal</p>
+            <p><span>Peso: <input type="number">kg </span><span class="altura">Altura: <input type="number">m</span></p>
         </div>
         <div>
             Vamos tentar resolver!
