Desafio11 - Calculadora de IMC

--- a/Desafios/Desafio11/desafio.html
+++ b/Desafios/Desafio11/desafio.html
@@ -14,7 +14,7 @@
     <section>
         <div>
             <p>Calculadora de Índice de Massa Corporal</p>
-            <p><span>Peso: <input type="number">kg </span><span class="altura">Altura: <input type="number">m</span></p>
+            <p><span>Peso: <input type="number">kg </span><span class="altura">Altura: <input type="number">m</span><input type="button" value="Calcular" onclick="calcular()"></p>
         </div>
         <div>
             Vamos tentar resolver!
