Desafio11 - Calculadora de IMC

--- a/Desafios/Desafio11/desafio.html
+++ b/Desafios/Desafio11/desafio.html
@@ -16,8 +16,8 @@
             <p>Calculadora de Índice de Massa Corporal</p>
             <p><span>Peso: <input type="number" id="txtpeso" name="txtpeso">kg </span><span class="altura">Altura: <input type="number" id="txtaltura" name="txtaltura">m</span><input type="button" value="Calcular" onclick="calcular()" id="btncalc"></p>
         </div>
-        <div>
-            Vamos tentar resolver!
+        <div id="resultado">
+            
         </div>
     </section>
 
