--- a/Desafios/Desafio12/desafio.html
+++ b/Desafios/Desafio12/desafio.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo Para os Desafios!</title>
+    <title>Desafio 12!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Maior e menor!</h1>
     </header>
     
     <section>
