Desafio12 - Maior e o Menor Número

--- a/Desafios/Desafio12/desafio.html
+++ b/Desafios/Desafio12/desafio.html
@@ -13,10 +13,11 @@
     
     <section>
         <div>
-            Desafio??????
+            <p>Maior e menor entre 5 Números</p>
+            <p>Digite um número: <input type="number" id="txtnun" name="txtnum" class="txtnr"> <input type="button" value="Inserir" id="btninserir" onclick="inserir()" class="btnins"> </p>
         </div>
         <div>
-            Vamos tentar resolver!
+            
         </div>
     </section>
 
