Desafio12 - Maior e o Menor Número

--- a/Desafios/Desafio12/desafio.html
+++ b/Desafios/Desafio12/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            <p>Maior e menor entre 5 Números</p>
+            <p>Maior e menor entre 5 números.</p>
             <p>Digite um número: <input type="number" id="txtnun" name="txtnum" class="txtnr"> <input type="button" value="Inserir" id="btninserir" onclick="inserir()" class="btnins"></p>
             <p>
                 <select name="selectnum" id="selectnum" size="5">
