--- a/Desafios/Desafio12/desafio.html
+++ b/Desafios/Desafio12/desafio.html
@@ -21,7 +21,7 @@
                 </select>
             </p>
         </div>
-        <div>
+        <div id="resultado">
             
         </div>
     </section>
