Desafio13 - Multiplos de 3 e de 5

--- a/Desafios/Desafio13/desafio.html
+++ b/Desafios/Desafio13/desafio.html
@@ -8,12 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Multiplos de 3 e de 5</h1>
+        <h1>Multiplos de 3 ou do 5!</h1>
     </header>
     
     <section>
         <div>
-            Desafio??????
+            <p>Verificador de Multiplos de 3 ou do 5! </p>
+            <p>Insira um número: <input type="number" name="txtnum" id="txtnum" class="txtnr"> <input type="button" name="btninsert" id="btninsert" value="Inserir"> </p>
+            <p>
+                <select name="selnum" id="selnum" size="6">
+
+                </select><br>
+                <input type="button" name="btnverifica" id="btnverifica" value="Verificar" class="btnverificar">
+            </p>
         </div>
         <div>
             Vamos tentar resolver!
